examples/errors/typing/case_incompatible_column.cn
fun mixed : Int -> Int [pure] = {
    n -> case unknown_call(n) of {
        (a, b) -> a
      | LCons x -> x
    }
}
main : Int [pure] = mixed(1)
